--- a/templates/accounts/sign_in.html
+++ b/templates/accounts/sign_in.html
@@ -12,19 +12,19 @@
 	  	<div class="col-md-4 col-sm-12 col-lg-4 col-xs-4">	
 		  <h1 class="text-center"><strong>Sign In</strong></h1>
 		  <br>
-			<form action="/action_page.php" id="sign_form">
-				
+			<form action="{% url 'accounts:signin' %}" method="post" id="sign_form">
+				{% csrf_token %}
 				<div class="google-btn">
 					<button type="submit" class="btn-block"><img src="{% static 'img/google_logo.png' %}"/> Continue with Google</button>
 				</div>
 		     
 			  <div class="form-group">
 			    <label for="pwd">EMAIL</label>
-			    <input type="text" class="form-control input" placeholder="Enter your email adress...">
+			    <input type="text" name="email" class="form-control input" placeholder="Enter your email adress...">
 			  </div>
 			  <div class="form-group">
 			    <label for="pwd">PASSWORD</label>
-			    <input type="password" class="form-control input"  value="">
+			    <input type="password" name="pwd" class="form-control input"  value="">
 			  </div>
 			  <button type="submit" class="btn btn-block tetiary-btn">Sign in</button><br>
 			  <a href="{% url 'recover_password' %}" class="text-center">Forgot Password?</a>
